--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -32,7 +32,7 @@
             <li id="sprintValue"></li>
         </ul>
     </div>
-    <div id="addEmployee"></div>
+    <div id="addEmployee"><button id='addButton'>Add Employee</button></div>
     <div id="employeeList">
 
 
